# BridgeAI

./: .gitignore  pyproject.toml
spec/: tree.json
src/bridgeai/: apply.py  cli.py  schema.py
tests/: test_apply_basic.py  test_smoke.py
