[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgeai"
version = "0.1.0"
description = "BridgeAI: apply structured change packets to a repo (code+docs), optionally run commands and git commit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
bridge = "bridgeai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bridgeai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
